RTP Stream Analysis - Save Payload error with .enc files from Cisco NAM
This issue was migrated from bug 2000 in our old bug tracker.
Original bug information:
Reporter: Carl Batchelder
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows XP
Platform: x86
Version: 0.99.6
Attachments:
NAM_RTP_ver3_4.enc: No error when RTP saved as .au or .raw
NAM_RTP_ver3_6.enc: NAM Version 3.6 .enc that gives error when saving RTP as .raw or .au