Fix for bug 2000. Make sure that both datalink layer and application layer agree that information is missing before refusing to write a payload.

svn path=/trunk/; revision=23618